<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.detailsFgm.PlayerDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:descendantFocusability="blocksDescendants">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="6dp"
                android:translationZ="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/header"
                app:srcCompat="@drawable/ic_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/app_name"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="100dp"
                app:layout_constraintStart_toEndOf="@id/arrow"
                app:layout_constraintTop_toTopOf="@id/arrow" />

            <ImageView
                android:id="@+id/club_image"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="@string/club_image"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="@id/header"
                app:layout_constraintTop_toTopOf="@id/header" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:text="Messi" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@color/magenta"
                android:elevation="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginBottom="20dp"
                android:scaleType="center"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.647" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/position"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                app:layout_constraintEnd_toStartOf="@id/clubName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="RW" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/clubName"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/position"
                app:layout_constraintTop_toTopOf="@id/position"
                tools:text="PSG" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/position_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textColor="@color/white_56"
                app:layout_constraintEnd_toStartOf="@id/clubName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/position"
                tools:text="Position" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/club_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club"
                android:textColor="@color/white_56"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/position"
                app:layout_constraintTop_toBottomOf="@id/clubName"
                tools:text="Club" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_title"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_stats"
                android:textColor="@color/white_93"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/position_title" />

            <TextView
                android:id="@+id/pace_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/pace"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_title" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progressPace"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/pace_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pace_title"
                app:layout_constraintTop_toTopOf="@id/pace_title"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/colorPrimary"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_max="99"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/dribbling_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/dribbling"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pace_title" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progressDribbling"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/dribbling_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progressPace"
                app:layout_constraintTop_toTopOf="@id/dribbling_title"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_orange_100"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_max="99"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/passing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/passing"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dribbling_title" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progressPassing"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/passing_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progressPace"
                app:layout_constraintTop_toTopOf="@id/passing_title"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_blue_200"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_max="99"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/shooting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/shooting"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passing_title" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progressShooting"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/shooting_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progressPace"
                app:layout_constraintTop_toTopOf="@id/shooting_title"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_teal_200"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_max="99"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/def_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/defending"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shooting_title" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progressDefence"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/def_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progressPace"
                app:layout_constraintTop_toTopOf="@id/def_title"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_green_200"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_max="99"
                app:progressView_radius="12dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/white_12"
                android:src="@drawable/ic_favorite"
                android:translationZ="90dp"
                app:fabSize="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:contentDescription="FAB" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>